CHANGES
*******

0.18 (unreleased)
=================

* Uploading huge files lead to excessive memory consumption as the whole body
  was consumed for no good reason. This is now fixed.

  See `#504`_

  .. _#504: https://github.com/morepath/morepath/issues/504

0.17 (2016-12-23)
=================

* **Removed**: The class ``morepath.ViewRegistry`` is gone.

* Upload universal wheels to pypi during release.

* Refactored and simplified implementation of ``ConverterRegistry``.

* Bugfix: exception views in mounted apps weren't looked up correctly
  anymore.

* Adds compatibility with WebOb 1.7.

* Removed extra spaces after the colon in json.
  For example: {"foo": "bar"} is now {"foo":"bar"}.

* Morepath now keeps track of what code was used to resolve a path and
  a view. You use `more.whytool`_ to get a command line tool that
  provides insight in what code was used for a request.

.. _`more.whytool`: https://pypi.python.org/pypi/morepath

0.16.1 (2016-10-04)
===================

* Adjust ``setup.py`` to require Reg 0.10 and Dectate 0.12, otherwise
  Morepath won't work properly.

0.16 (2016-10-04)
=================

Release highlights
------------------

* A new, cleaner and faster implementation of Reg underlies this
  version of Morepath. It turns generic functions into methods on the
  ``App`` class, and removes implicit behavior entirely.

  This has some impact if you used the low-level ``function``
  directive or if you defined your own predicates with the
  ``predicate`` and ``predicate_fallback`` directives, see details
  below.

* A new build environment based around virtualenv and pip. We've
  removed the old buildout-based build environment. ``doc/developing.rst``
  has much more.

* Performance work boosts performance of Morepath significantly.

Removals & Deprecations
-----------------------

- **Removed**: ``morepath.remember_identity`` is removed from the
  Morepath API.

  Use ::

    request.app.remember_identity(response, request, identity)
