@@ -11,6 +11,12 @@ CHANGES
 
   .. _#504: https://github.com/morepath/morepath/issues/504
 
+* Fixes link prefix not applying to mounted applications.
+
+  See '#516'
+
+  .. _#516: https://github.com/morepath/morepath/issues/516
+
 0.17 (2016-12-23)
 =================
 
